@@ -60,6 +60,7 @@ static int mi_interp_query_hook (const char *ctlstr, va_list ap);
 static char *mi_interp_read_one_line_hook (char *prompt, int repeat,
 					   char *anno);
 
+static void mi3_command_loop (void);
 static void mi2_command_loop (void);
 static void mi1_command_loop (void);
 
@@ -133,10 +134,12 @@ mi_interpreter_resume (void *data)
   /* If we're _the_ interpreter, take control. */
   if (current_interp_named_p (INTERP_MI1))
     command_loop_hook = mi1_command_loop;
-  else if (current_interp_named_p (INTERP_MI))
+  else if (current_interp_named_p (INTERP_MI2))
     command_loop_hook = mi2_command_loop;
+  else if (current_interp_named_p (INTERP_MI3))
+    command_loop_hook = mi3_command_loop;
   else
-    return 0;
+    command_loop_hook = mi2_command_loop;
 
   return 1;
 }
@@ -331,6 +334,12 @@ static void
 mi2_command_loop (void)
 {
   mi_command_loop (2);
+}
+
+static void
+mi3_command_loop (void)
+{
+  mi_command_loop (3);
 }
 
 static void
