@@ -1162,7 +1162,9 @@ captured_mi_execute_command (struct ui_out *uiout, void *data)
 
       /* If we changed interpreters, DON'T print out anything. */
       if (current_interp_named_p (INTERP_MI)
-	  || current_interp_named_p (INTERP_MI1))
+	  || current_interp_named_p (INTERP_MI1)
+	  || current_interp_named_p (INTERP_MI2)
+	  || current_interp_named_p (INTERP_MI3))
 	{
 	  /* print the result */
 	  /* FIXME: Check for errors here. */
